Update MediaVmMapper Test for building